--- a/docker-build-and-push/action.yml
+++ b/docker-build-and-push/action.yml
@@ -6,6 +6,14 @@ inputs:
     description: 'Docker Registry'
     required: true
     default: ghcr.io
+  docker-username:
+    description: 'Docker Username'
+    required: true
+    default: '${{ github.actor }}'
+  docker-password:
+    description: 'Docker Password'
+    required: true
+    default: '${{ github.token }}'
   docker-image-name:
     description: 'Docker Image Name'
     required: true
@@ -18,7 +26,7 @@ inputs:
     required: true
   docker-build-platforms:
     description: 'Docker build platforms'
-    required: false
+    required: true
     default: 'linux/arm64'
 
 runs:
@@ -37,8 +45,8 @@ runs:
       uses: docker/login-action@v2
       with:
         registry: ${{ inputs.docker-registry }}
-        username: ${{ github.actor }}
-        password: ${{ inputs.github-token }}
+        username: ${{ inputs.docker-username }}
+        password: ${{ inputs.docker-password }}
 
     - name: Docker meta
       id: meta
