fix docker build platform default

--- a/docker-build-and-push/action.yml
+++ b/docker-build-and-push/action.yml
@@ -27,7 +27,7 @@ inputs:
   docker-build-platforms:
     description: 'Docker build platforms'
     required: true
-    default: 'linux/arm64'
+    default: 'linux/amd64'
   docker-build-args:
     description: 'Docker build args'
     required: false
