configure webhook url

--- a/notify-slack/action.yml
+++ b/notify-slack/action.yml
@@ -16,3 +16,4 @@ runs:
         status: ${{ job.status }}
         steps: ${{ toJson(steps) }}
         channel: "#github"
+        webhook-url: ${{ inputs.slack-webhook }}
